First_Step/data/46/165/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:24: error: class, interface, or enum expected
    public static int fastNumberOfCancellations(int[] tab) {
                  ^
Tools.java:27: error: class, interface, or enum expected
        while (change){
        ^
Tools.java:29: error: class, interface, or enum expected
        for (int h=0; h<(tab.length-1);h++){
        ^
Tools.java:29: error: class, interface, or enum expected
        for (int h=0; h<(tab.length-1);h++){
                      ^
Tools.java:29: error: class, interface, or enum expected
        for (int h=0; h<(tab.length-1);h++){
                                       ^
Tools.java:32: error: class, interface, or enum expected
                tab[h]=tab[h+1];
                ^
Tools.java:33: error: class, interface, or enum expected
                tab[h+1]=temp;
                ^
Tools.java:34: error: class, interface, or enum expected
              change = true;
              ^
Tools.java:35: error: class, interface, or enum expected
             }
             ^
Tools.java:40: error: class, interface, or enum expected
        int l=tab.length-1;
        ^
Tools.java:41: error: class, interface, or enum expected
        int nombre = 0 ;
        ^
Tools.java:42: error: class, interface, or enum expected
        while (k<l){
        ^
Tools.java:45: error: class, interface, or enum expected
            k++;
            ^
Tools.java:46: error: class, interface, or enum expected
            l--;
            ^
Tools.java:47: error: class, interface, or enum expected
            }else{if (tab[k]+tab[l]>0){l--;
            ^
Tools.java:48: error: class, interface, or enum expected
                }else{k++;}
                ^
Tools.java:48: error: class, interface, or enum expected
                }else{k++;}
                          ^
Tools.java:52: error: class, interface, or enum expected
            }
            ^
18 errors
Not compiled
--|>
Grade :=>>0.00000
